; ModuleID = '/home/carl/AnghaBench/lede/package/system/fwtool/src/extr_fwtool.c_tail_crc32.c'
source_filename = "/home/carl/AnghaBench/lede/package/system/fwtool/src/extr_fwtool.c_tail_crc32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.data_buf = type { i32, i64, i64 }

@BUFLEN = common dso_local global i32 0, align 4
@crc_table = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.data_buf*, i32)* @tail_crc32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tail_crc32(%struct.data_buf* %0, i32 %1) #0 {
  %3 = alloca %struct.data_buf*, align 8
  %4 = alloca i32, align 4
  store %struct.data_buf* %0, %struct.data_buf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.data_buf*, %struct.data_buf** %3, align 8
  %6 = getelementptr inbounds %struct.data_buf, %struct.data_buf* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %17

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.data_buf*, %struct.data_buf** %3, align 8
  %12 = getelementptr inbounds %struct.data_buf, %struct.data_buf* %11, i32 0, i32 2
  %13 = load i64, i64* %12, align 8
  %14 = load i32, i32* @BUFLEN, align 4
  %15 = load i32, i32* @crc_table, align 4
  %16 = call i32 @crc32_block(i32 %10, i64 %13, i32 %14, i32 %15)
  store i32 %16, i32* %4, align 4
  br label %17

17:                                               ; preds = %9, %2
  %18 = load i32, i32* %4, align 4
  %19 = load %struct.data_buf*, %struct.data_buf** %3, align 8
  %20 = getelementptr inbounds %struct.data_buf, %struct.data_buf* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load %struct.data_buf*, %struct.data_buf** %3, align 8
  %23 = getelementptr inbounds %struct.data_buf, %struct.data_buf* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* @crc_table, align 4
  %26 = call i32 @crc32_block(i32 %18, i64 %21, i32 %24, i32 %25)
  ret i32 %26
}

declare dso_local i32 @crc32_block(i32, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
